# MOSS_full

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
pretrained_models/: README.md
relay_server/: .gitignore  LICENSE  README.md  SETUP_GUIDE.md  package-lock.json  package.json  wrangler.toml
relay_server/src/: index.js
segmentation_suite/: __init__.py  __main__.py  dpi_scaling.py  launcher.py  loading_dialog.py  mtlsd_model_compat.py  project_config.py  train_unet_increasedRF.py  training_wizard.py  zarr_image_source.py
segmentation_suite/em_pipeline/: __init__.py  pipeline.py
segmentation_suite/models/: __init__.py  refiner.py  unet.py
segmentation_suite/network/: __init__.py  aggregator.py  client.py  protocol.py  relay_config.example.txt  relay_config.txt  server.py  session.py
segmentation_suite/scripts/: extract_sam2_features.py
segmentation_suite/widgets/: __init__.py  gl_canvas.py  loading_overlay.py  loss_plot_widget.py  lsd_preview_dialog.py  optimized_canvas.py  paint_canvas.py  training_data_reviewer.py  zarr_canvas.py
segmentation_suite/wizard_pages/: __init__.py  cleanup_page.py  finish_page.py  home_page.py  interactive_training_page.py  prediction_page.py  proofreading_page.py  reslice_page.py  segmentation_3d_page.py  segmentation_combined_page.py  setup_page.py  training_page.py  voting_page.py
segmentation_suite/workers/: __init__.py  file_saver_worker.py  image_loader_worker.py  predict_worker.py  refiner_worker.py  reslice_worker.py  rotate_worker.py  train_worker.py  (+2 more)
(+17 files in other folders)
